# HR-Assistant

./: .env.example  .gitignore  README.fa.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  gap.py  judging.py  main.py  models.py  normalize.py  schemas.py  seed.py
backend/app/api/: gap.py  jobs.py  ranking.py  submissions.py
backend/app/eval/: __init__.py  __main__.py  gold_set.json  harness.py  metrics.py
backend/app/extraction/: __init__.py  normalize.py  pdf.py  service.py
backend/app/llm/: __init__.py  errors.py  fake.py  gateway.py  litellm_gateway.py  types.py
backend/app/scoring/: __init__.py  scorer.py  service.py  weights.py
backend/tests/: conftest.py  test_async_scoring.py  test_eval_harness.py  test_eval_metrics.py  test_evaluation_read.py  test_extraction_service.py  test_gap.py  test_gap_report_api.py  test_gateway.py  test_gateway_errors.py  test_jd_extraction_api.py  test_jobs_api.py  test_judging.py  test_normalize.py  test_pdf.py  test_pdf_upload_api.py  test_rank_now_api.py  test_ranking_api.py  test_scorer.py  test_scoring_service.py  test_seed.py  test_submission_concurrency.py  test_submissions_api.py
doc-fa/: management-plan.md
docs/: domain-model.md  glossary.md  prd-resume-ranking.md
docs/decisions/: 0001-primary-customer-is-hr.md  0002-ranking-method-and-evaluation.md  0003-mvp-scope-for-sprint.md  0004-persian-language-and-rtl.md  0005-ai-engineering-stack.md  0006-judging-module.md  0007-evaluation-breakdown-owner.md  0008-typed-gateway-failures.md  0009-rescore-job-orchestrator.md  0010-normalize-neutral-home.md  0011-schemas-scoring-coupling-kept.md  0012-no-network-io-in-write-transaction.md  0013-async-submission-scoring.md  0014-async-hr-rescore-actions.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: create-job-form.tsx  job-list.tsx  ranking-panel.tsx  requirements-editor.tsx  (+1 more)
(+9 files in other folders)
