[project]
name = "hr-assistant-backend"
version = "0.1.0"
description = "Persian HR Resume Ranking — FastAPI + SQLite backend (walking skeleton)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LLM gateway stack (ADR-0005). Imported lazily by the real gateway, so the
    # test path (fake gateway) never touches them or the network.
    "litellm>=1.40",
    "instructor>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.eval" = ["*.json"]  # ship the committed Gold Set with the package
