[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hr-assistant-backend"
version = "0.1.0"
description = "Persian HR Resume Ranking — FastAPI + SQLite backend (walking skeleton)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LLM gateway stack (ADR-0005). Imported lazily by the real gateway, so the
    # test path (fake gateway) never touches them or the network.
    "litellm>=1.40",
    "instructor>=1.3",
    # Best-effort PDF resume upload (#8): pypdf for text extraction,
    # python-multipart for the multipart/form-data upload endpoint.
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
# The importable package is `app`; hatchling ships its files (including the
# committed Gold Set, app/eval/gold_set.json) without a setuptools egg-info.
packages = ["app"]
